dependencies/policies/imagepullpolicy/.chainsaw-test/imagepullpolicy/build/resources/pod-build-no-suffix.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: build
  labels:
    pipelines.appstudio.openshift.io/type: build
spec:
  containers:
  - image: bash
    name: build-pod-1
    imagePullPolicy: Always
  - image: bash
    name: build-pod-2
