dependencies/policies/imagepullpolicy/tekton-pr-taskrun-set-imagepullpolicy-build-binding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicyBinding
metadata:
  name: tekton-pr-taskrun-set-imagepullpolicy-build.konflux-ci.dev
spec:
  matchResources:
    objectSelector:
      matchLabels:
        pipelines.appstudio.openshift.io/type: build
  policyName: tekton-pr-taskrun-set-imagepullpolicy.konflux-ci.dev
